# fruit_shop

./: .gitignore  AGENTS.md  Dockerfile  MEMORY.md  PROGRESS.md  README.md  `.env.local`  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0bc3ddd924d3_create_fruit_table.py  1c88c3fcae4a_create_fruits_table.py  1fdaf947c01d_create_fruits_table.py  30eb4063f825_fix_missing_tables.py  6633b50233a1_force_create_real_table.py  67d47be70bff_fix_empty_migration.py  6b287abff7c2_final_try_to_fix_empty_pass.py  74f464f1df44_create_customer_table.py  7ca1dc987936_last_final_try.py  8112b0360bfc_create_fruit_table_final.py  9250f5b51ede_last_attempt_to_see_what_is_missing.py  940a232ea8f2_re_attempt_detect_fruits.py  974da280f2c1_fix_it_for_real.py  97632dd41e17_actually_create_fruit_table.py  9f69f9526aa6_fix_the_empty_migrations_manually.py  ba84bdf08be2_final_attempt.py  cc8b2cfcd753_create_fruit_table.py  da16a33dcbf1_force_create_fruit_table.py  dd65615c444d_actually_create_table.py  e3149e4b05ae_create_fruit_table_fix.py  e7dcda59df16_create_fruit_table.py  e93a34e08d47_detect_and_fix_empty_upgrade_pass.py  f099e739cd4d_detect_fruits_final_try.py  fc1f614311ae_final_try_v3.py
skills/: fruit_shop_sdlc_cycle.md
src/: config.py  main.py  seed_data.py
src/core/: db.py
src/crud/: crud_fruit.py  customer.py
src/fruit_shop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: customer.py  fruit.py  order_cart_payment.py
src/schemas/: customer.py  fruit.py  order_cart_payment.py
(+9 files in other folders)
