[project]
name = "fruit-shop"
version = "0.1.0"
description = "A production-ready FastAPI service for managing fruit inventory."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.136.0",
    "sqlalchemy==2.0.49",
    "pydantic-settings==2.14.0",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.12",
    "uvicorn==0.45.0",
    "python-dotenv==1.2.2",
    "pytest==9.0.3",
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio",
]

[tool.uv]
